# personal-rd-agent-os

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: models.yaml  privacy_policy.yaml  rag.yaml  redaction.yaml  tool_policy.yaml
data/: approvals.db
data/samples/: eval_report.md  trace_sample.jsonl
docs/: architecture.md  architecture_overview.md  final_architecture.md  limitations.md  local_model_stack.md  parking_lot.md  portfolio_case_study.md  project_closeout.md  quality_baseline_v0.1.0.md
docs/audit/: full_project_audit.md  (+1 more)
eval_sets/: citation.jsonl  citation_adversarial.jsonl  model_routing.jsonl  model_routing_adversarial.jsonl  no_answer.jsonl  privacy_routing.jsonl  privacy_routing_adversarial.jsonl  rag_qa.jsonl  real_rag_qa.jsonl
scripts/: check_langchain_llama_cpp.py  check_local_llm.sh  check_local_model_stack.py  demo_eval.sh  demo_foundation.sh  demo_real_corpus.sh  demo_trace.sh  demo_v1_eval.sh  demo_v1_foundation.sh  demo_v1_research_thread.sh  demo_v1_trust_runtime.sh
tests/: test_batch11_runtime.py  test_batch12_corpus.py  test_batch13_retrieval.py  test_batch14_langgraph.py  test_batch15_tools.py  test_batch16_apps.py  test_batch18_5_audit_fixes.py  test_batch19_approval.py  test_batch20_no_answer.py  test_batch21_redaction.py  test_batch22_thread.py  test_batch23_hardening.py  test_chunker.py  test_config.py  test_indexer.py  test_local_llm_and_structured.py  test_markdown_parser.py  test_model_router.py  test_privacy_router.py  test_research_graph.py  test_retriever.py  test_schemas.py  test_smoke.py  test_trace_store.py
(+128 files in other folders)
