[project]
name = "personal-rd-agent-os"
version = "0.1.0"
description = "Personal R&D Agent OS — model-agnostic, privacy-aware, evaluation-driven agent system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RDOS" }]

dependencies = [
    "langchain>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "typer>=0.12,<0.14",
    "click>=8.1,<8.2",
    "rich>=13,<14",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "python-dotenv>=1.0,<2",
    "lancedb>=0.15,<0.20",
    "pyyaml>=6.0,<7",
    "python-frontmatter>=1.1,<2",
    "markdown-it-py>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<0.9",
    "mypy>=1.11,<2",
]

[project.scripts]
rdos = "rdos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdos"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TID"]
ignore = ["E501", "SIM103", "SIM102"]  # cosmetic if/return style preferences

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src/rdos"]
